Spacing FixesWarehouse and location section

--- a/src/theme/_variables.scss
+++ b/src/theme/_variables.scss
@@ -26,7 +26,7 @@ $section-title-font: ( null: map-get($font-sizes, sm), xs: map-get($font-sizes, 
 
 // line height
 ////////////////
-$line-height: ( xxxs: 12px, xxs: 14px, xs:22px, pg: 26px, sm: 24px, md:28px, lg:32px, xl: 40px, xxl: 48px, xxxl: 56px, xxxxl: 66px);
+$line-height: ( xxxs: 12px, xxs: 14px, xs:20px, pg: 26px, sm: 24px, md:28px, lg:32px, xl: 40px, xxl: 48px, xxxl: 56px, xxxxl: 66px);
 //////
 $xxxxl-line-height: ( null: map-get($line-height, md), xs: map-get($line-height, md), md: map-get($line-height, xxxxl), lg: map-get($line-height, xxxxl));
 $xxxl-line-height: ( null: map-get($line-height, lg), xs: map-get($line-height, lg), md: map-get($line-height, xxxl), lg: map-get($line-height, xxxl));
