--- a/src/widgets/card-list/card-list.scss
+++ b/src/widgets/card-list/card-list.scss
@@ -63,8 +63,14 @@
         ul {
             display: flex;
             list-style-type: none;
+            padding-left: 0;
+            margin-bottom: 0;
+            
             li {
                 color: $secondary;
+                margin-top: 0;
+                @include font-size($xxs-font);
+            @include line-height($sm-line-height); 
                 &:first-child {
                     &:before {
                         display: none;
@@ -78,6 +84,9 @@
                     background: $secondary;
                     display: inline-block;
                     margin: 2px 10px;
+                    position: relative;
+                    left: 0;
+                    top:0
                 }
             }
         }
