--- a/src/widgets/location/location.scss
+++ b/src/widgets/location/location.scss
@@ -95,17 +95,15 @@
         padding:32px 32px 0 0;
       }
     }
-    p{
-      margin-bottom: 8px;
-      @include md{
-        margin-bottom: 16px;
-      }
-      &:last-of-type{
-        margin-bottom: 32px;
-        @include md{
-          margin-bottom: 40px;
-        }
-      }
+  }
+  p{
+    margin-bottom: 8px;
+    @include md{
+      margin-bottom: 16px;
+    }
+    &:last-of-type{
+      margin-bottom: 0;
+      
     }
   }
   // p{
