--- a/src/widgets/overview-text/overview-text.scss
+++ b/src/widgets/overview-text/overview-text.scss
@@ -1,4 +1,12 @@
 .product-wrapper{
+  padding-bottom: 30px;
+    margin-bottom:30px;
+    border-bottom:1px solid #d8d8d8;
+    &:last-child{
+        padding-bottom: 0;
+        margin-bottom:0;
+        border-bottom:0;
+    }
     &.reverse{
         direction: rtl;
         .product{
@@ -6,35 +14,29 @@
               direction: ltr;
                 @include lg(){
                     padding-left:0;
-                    padding-right:15px;
+                    padding-right:32px;
                 }
             }
             &__image-wrap{
                 @include lg(){
-                    margin-left:15px;
+                    margin-left:32px;
                     margin-right:0;
                 }
             }
         }
     }
-    padding-bottom: 40px;
-    margin-bottom:40px;
-    border-bottom:1px solid $light-grey;
-    &:last-child{
-        padding-bottom: 0;
-        margin-bottom:0;
-        border-bottom:0;
-    }
 }
 .product{
     &__wrap{
+      padding-top: 16px;
         @include lg(){
-            padding-left:15px;
+            padding-left:32px;
+            padding-top: 32px;
         }
         ul {
           padding-left: 26px;
-          @include font-size($paragraph-font);
-          @include line-height($paragraph-line-height);
+          // @include font-size($paragraph-font);
+          // @include line-height($paragraph-line-height);
           font-family: $font-roboto-light;
           color: $grey;
           direction: ltr;
@@ -43,61 +45,72 @@
               @include lg() {
                   margin-bottom: 20px;
               }
-              list-style: none;
-              &:before {
-                  content: "\2022";
-                  color: $secondary;
-                  font-weight: bold;
-                  display: inline-block;
-                  width: 1em;
-                  margin-left: -1em;
-                  font-size: 23px;
-                  vertical-align: middle;
-              }
+              // list-style: none;
+              // &:before {
+              //     content: "\2022";
+              //     color: $secondary;
+              //     font-weight: bold;
+              //     display: inline-block;
+              //     width: 1em;
+              //     margin-left: -1em;
+              //     font-size: 23px;
+              //     vertical-align: middle;
+              // }
           }
       }
-      .section__title{
-        margin-bottom: 8px;
-        @include line-height($xxxl-line-height); 
-        @include lg{
-          margin-bottom: 0;
-        }
-      }
+      // .section__title{
+      //   margin-bottom: 8px;
+      //   @include lg{
+      //     margin-bottom: 0;
+      //   }
+      // }
+      // h2{
+      //   margin-bottom: 8px;
+      //     @include lg{
+      //       margin-bottom: 0;
+      //     }
+      // }
       p{
         margin: 8px 0 0;
         color:$primary;
         @include lg{
           margin: 24px 0 0;
         }
-        &:last-of-type{
-          margin-bottom: 24px;
-          @include md{
-            margin-bottom: 40px;
-          }
-        }
+        // &:last-of-type{
+        //   margin-bottom: 24px;
+        //   @include md{
+        //     margin-bottom: 40px;
+        //   }
+        // }
 
 
         &:empty{
           display: none;
         }
       }
-    }
-    &__text{
-      margin: 0 0 27px;
-      @include lg{
-        margin: 15px 0 20px;
-        // max-height: 9em;
-        color: $primary;
-      }
-      @include xl{
-        margin: 24px 0 40px;
+      .btn{
+        margin-top: 32px;
+        @include lg{
+          margin-top: 40px;
+        }
       }
     }
+    // &__text{
+    //   margin: 0 0 27px;
+    //   @include lg{
+    //     margin: 15px 0 20px;
+    //     // max-height: 9em;
+    //     color: $primary;
+    //   }
+    //   @include xl{
+    //     margin: 24px 0 40px;
+    //   }
+    // }
     &__image-wrap{
         margin-bottom: 16px;
         @include lg(){
             margin-bottom: 0;
-            margin-right: 15px;
+            margin-right: 32px;
         }
       img{
         object-fit: cover;
